Changed discord link

--- a/src/main/constants/styleUp_email.html
+++ b/src/main/constants/styleUp_email.html
@@ -252,7 +252,7 @@
 																	0
 																	10px;
 															">
-																<a href=" https://discord.gg/EBUk5e7m"
+																<a href=" https://discord.gg/AtEtD6Y5Mm"
 																	target="_blank"><img alt="instagram" height="32"
 																		src="https://styleupstatic.s3.amazonaws.com/discord2x.png" style="
 																		display: block;
